@@ -34,6 +34,13 @@ function Span (transaction, ...args) {
     : {}
   const [name, ...tsaArgs] = args // "tsa" === Type, Subtype, Action
 
+  if (opts.timer) {
+    process.emitWarning(
+      'specifying the `timer` option to `new Span()` was never a public API and will be removed',
+      'DeprecationWarning',
+      'ELASTIC_APM_SPAN_TIMER_OPTION'
+    )
+  }
   if (!opts.childOf) {
     const defaultChildOf = transaction._agent._instrumentation.currSpan() || transaction
     opts.childOf = defaultChildOf
